resumecontroller updated